--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="menu">  
                 <a class="menu-item" href="">ABOUT FIASCO'S</a>
                 <a class="menu-item" href="">MENU</a>
-                <a class="menu-item" href="/receipes.html">RECIPES</a>
+                <a class="menu-item" href="/receipe1.html">RECIPES</a>
                 <a class="menu-item" href="">CONTACT</a>
                 <a class="menu-item menu-button" href="">MAKE RESERVATION</a>
         </nav>
