--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="top-bar">
         <div class="logo">
-            <a href="/index.html">THE FIASCO</a>
+            <a href="Restaurant-site/">THE FIASCO</a>
         </div>
         <nav class="menu">  
                 <a class="menu-item" href="">ABOUT FIASCO'S</a>
