--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <header>
         <div class="top-bar">
         <div class="logo">
-            <a href="Restaurant-site/">THE FIASCO</a>
+            <a href="index.html">THE FIASCO</a>
         </div>
         <nav class="menu">  
                 <a class="menu-item" href="">ABOUT FIASCO'S</a>
                 <a class="menu-item" href="">MENU</a>
-                <a class="menu-item" href="/receipe1.html">RECIPES</a>
+                <a class="menu-item" href="receipe1.html">RECIPES</a>
                 <a class="menu-item" href="">CONTACT</a>
                 <a class="menu-item menu-button" href="">MAKE RESERVATION</a>
         </nav>
